fixtures/grammar/reject/duplicate-inline-continuation.fm
---
items:
  - id: concept:first
    id: concept:second
---
Vera Example
